--- a/.config
+++ b/.config
@@ -102,6 +102,7 @@ CONFIG_PACKAGE_luci-app-passwall_INCLUDE_V2ray=y
 CONFIG_PACKAGE_luci-app-passwall_INCLUDE_V2ray_Plugin=y
 CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Xray=y
 CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Xray_Plugin=y
-CONFIG_PACKAGE_luci-app-transmission=y
-CONFIG_PACKAGE_luci-i18n-transmission-zh-cn=y
-CONFIG_PACKAGE_transmission-daemon=y
+#CONFIG_PACKAGE_luci-app-transmission=y
+#CONFIG_PACKAGE_luci-i18n-transmission-zh-cn=y
+#CONFIG_PACKAGE_transmission-daemon=y
+CONFIG_PACKAGE_baidupcs-web=y
