--- a/.config
+++ b/.config
@@ -9,6 +9,7 @@ CONFIG_TARGET_ROOTFS_PARTSIZE=300
 # CONFIG_GRUB_CONSOLE is not set
 CONFIG_PACKAGE_luci-app-docker=y
 CONFIG_PACKAGE_luci-i18n-docker-zh-cn=y
+CONFIG_PACKAGE_baidupcs-web=y
 # CONFIG_PACKAGE_luci-app-qbittorrent is not set
 #CONFIG_PACKAGE_luci-app-ssr-plus=y
 #CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Shadowsocks=y
@@ -40,7 +41,7 @@ CONFIG_PACKAGE_ddns-scripts_godaddy.com-v1=y
 CONFIG_PACKAGE_ddns-scripts_no-ip_com=y
 CONFIG_PACKAGE_ddns-scripts_nsupdate=y
 CONFIG_PACKAGE_ddns-scripts_route53-v1=y
-#CONFIG_PACKAGE_baidupcs-web=y
+CONFIG_PACKAGE_baidupcs-web=y
 CONFIG_PACKAGE_curl=y
 CONFIG_PACKAGE_htop=y
 CONFIG_PACKAGE_nano=y
