--- a/.config
+++ b/.config
@@ -10,6 +10,7 @@ CONFIG_TARGET_ROOTFS_PARTSIZE=300
 CONFIG_PACKAGE_luci-app-docker=y
 CONFIG_PACKAGE_luci-i18n-docker-zh-cn=y
 CONFIG_PACKAGE_baidupcs-web=y
+CONFIG_BAIDUPCS_WEB_COMPRESS_UPX=y
 # CONFIG_PACKAGE_luci-app-qbittorrent is not set
 #CONFIG_PACKAGE_luci-app-ssr-plus=y
 #CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Shadowsocks=y
