--- a/.config
+++ b/.config
@@ -4,7 +4,7 @@ CONFIG_TARGET_x86_64_Generic=y
 CONFIG_PACKAGE_grub2-efi=y
 CONFIG_EFI_IMAGES=y
 CONFIG_TARGET_IMAGES_GZIP=y
-CONFIG_TARGET_ROOTFS_EXT4FS=y
+#CONFIG_TARGET_ROOTFS_EXT4FS=y
 CONFIG_TARGET_KERNEL_PARTSIZE=16
 CONFIG_TARGET_ROOTFS_PARTSIZE=310
 # CONFIG_GRUB_CONSOLE is not set
@@ -106,4 +106,3 @@ CONFIG_PACKAGE_luci-app-baidupcs-web=y
 #CONFIG_PACKAGE_luci-app-passwall_INCLUDE_V2ray_Plugin=y
 #CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Xray=y
 #CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Xray_Plugin=y
-
