--- a/.config
+++ b/.config
@@ -106,3 +106,17 @@ CONFIG_PACKAGE_luci-app-baidupcs-web=y
 #CONFIG_PACKAGE_luci-app-passwall_INCLUDE_V2ray_Plugin=y
 #CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Xray=y
 #CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Xray_Plugin=y
+CONFIG_PACKAGE_nfs-utils=y
+CONFIG_PACKAGE_nfs-utils-libs=y
+CONFIG_KERNEL_NFS_ACL_SUPPORT=y
+CONFIG_KERNEL_NFS_V3_ACL_SUPPORT=y
+CONFIG_BUSYBOX_DEFAULT_FEATURE_MOUNT_NFS=y
+CONFIG_PACKAGE_kmod-fs-nfs=y
+CONFIG_PACKAGE_kmod-fs-nfs-common=y
+CONFIG_PACKAGE_kmod-fs-nfs-common-rpcsec=y
+CONFIG_PACKAGE_kmod-fs-nfs-ssc=y
+CONFIG_PACKAGE_kmod-fs-nfs-v3=y
+CONFIG_PACKAGE_kmod-fs-nfs-v4=y
+CONFIG_PACKAGE_luci-app-nfs=y
+CONFIG_PACKAGE_nfs-kernel-server=y
+
